use URI class to ensure proper uri character encoding